Implement publishing process and release to PyPI and TestPyPI
- Add publishing scripts and documentation
- Update pyproject.toml for PyPI compatibility
- Configure Poetry for PyPI and TestPyPI deployments
- Perform initial release to TestPyPI for testing
- Successfully publish package to official PyPI

This commit marks a significant milestone in the project's lifecycle,
making the SSL Checker tool publicly available via PyPI. The publishing
process has been documented and automated where possible, ensuring
consistency in future releases.

Key changes:
- Verified Python 3.8+ compatibility
- Ensured all metadata in pyproject.toml is accurate
- Created and tested release process for both TestPyPI and PyPI
- Updated README with installation instructions from PyPI

The package is now installable via pip:
pip install ssl-checker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,23 @@
 [tool.poetry]
 name = "ssl-checker"
 version = "0.1.0"
-description = ""
+description = "Automated SSL certificate monitoring tool"
 authors = ["rtmax0 <rtmax0@gmail.com>"]
+license = "MIT"
 readme = "README.md"
+homepage = "https://github.com/rtmax0/ssl-checker"
+repository = "https://github.com/rtmax0/ssl-checker"
+keywords = ["ssl", "certificate", "monitoring", "security"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -11,9 +25,6 @@ requests = "^2.26.0"
 click = "^8.0.3"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
-
-[tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
 
 [build-system]
