--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,6 @@ readme = "README.md"
 homepage = "https://github.com/rtmax0/ssl-daily-check"
 repository = "https://github.com/rtmax0/ssl-daily-check"
 keywords = ["ssl", "certificate", "daily", "monitoring", "security"]
-packages = [
-    { include = "ssl_checker" },
-]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -35,4 +32,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-ssl-daily-check = "ssl_checker.main:main"
+ssl-daily-check = "ssl_daily_check.main:main"
