Refactor notification system and fix related issues
- Introduce BaseNotifier abstract class for extensibility
- Implement QyWeixinNotifier as a concrete notifier
- Update config and notifier modules to support new structure
- Adjust unit tests to accommodate changes
- Fix issues with notify rule configuration keys

This commit introduces a more extensible notification system,
allowing for easy addition of new notification methods in the future.
It also resolves issues related to configuration key naming and
updates all affected unit tests.

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,4 @@
+# fix for keyring error: Failed to create the collection: Prompt dismissed..
+export PYTHON_KEYRING_BACKEND=keyring.backends.null.Keyring
+
 layout poetry
