--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "ssl-daily-check"
-version = "0.2.1"
-description = "Daily SSL certificate monitoring and checking tool"
+version = "0.2.2"  # Updated version number
+description = "Daily SSL certificate monitoring and checking tool with extensible notification system"
 authors = ["rtmax0 <rtmax0@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/rtmax0/ssl-daily-check"
 repository = "https://github.com/rtmax0/ssl-daily-check"
-keywords = ["ssl", "certificate", "daily", "monitoring", "security"]
+keywords = ["ssl", "certificate", "daily", "monitoring", "security", "notification"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
